--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-destructuring": "^7.6.0",
     "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.6.2",
+    "@babel/runtime": "^7.9.6",
     "@rails/webpacker": "3.5",
     "babel-loader": "^8.0.6",
+    "jquery": "^3.5.0",
     "prop-types": "~15.6.0",
     "react": "~16.8.0",
     "react-countdown": "^2.2.1",
